# orbita

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
app/: data_layer.py  main.py
app/components/: __init__.py  charts.py  citation.py  disclaimer.py  styles.py
app/pages/: __init__.py  accounts.py  assets.py  cash_flow.py  categories.py  chat.py  connect.py  dashboard.py  goals.py  recurring.py  reports.py  transactions.py
config/: mcp_allowlist.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_INSTRUCTIONS.md  PLUGGY.md  VALUE_PROPOSITION.md
eval/: automation_tasks.json  golden_set.json  run_automation_eval.py  run_ragas.py
eval/results/: automation_report.json  ragas_report.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: charts.tsx  metric-card.tsx  (+5 more)
ingest/: __init__.py  loaders.py  pipeline.py  sources.yaml  splitter.py
src/: __init__.py  config.py
src/agents/: __init__.py  automation.py  data_query.py  general.py  retriever.py  safety.py  self_check.py  supervisor.py  writer.py
src/data/: transformations.py
src/graph/: __init__.py  builder.py  state.py
src/mcp/: __init__.py  client.py  mock_server.py  pluggy_direct.py  pluggy_server.py  pluggy_tools.py  security.py
src/rag/: __init__.py  embeddings.py  reranker.py  vectorstore.py
src/webhook/: register.py  server.py
tests/: conftest.py  test_automation.py  test_mcp_security.py  test_retriever.py  test_self_check.py  test_supervisor.py
(+12 files in other folders)
