[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbita"
version = "0.1.0"
description = "Órbita — Agentic financial assistant for Brazilian young adults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Órbita Team"}
]
keywords = ["financial-literacy", "langgraph", "rag", "mcp", "brazil"]

dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-ollama>=0.2",
    "langchain-mcp-adapters>=0.1",
    "faiss-cpu>=1.7",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ragas>=0.2",
    "mcp>=1.0",
    "httpx>=0.27",
    "pluggy-sdk>=1.0.0.post53",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src", "ingest", "eval"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
